@@ -1,27 +1,2 @@
-plugins {
-    id 'java-library'
-}
-
 group 'org.wastastic'
 version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    compileOnly 'org.jetbrains:annotations:21.0.1'
-    implementation 'org.ow2.asm:asm:9.1'
-}
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs
-            << "--enable-preview"
-            << "--add-modules=jdk.incubator.foreign"
-}
